<resources>
    <string name="app_name">BudgetCalculator</string>
    <string name="action_settings">Settings</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Pets</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_transaction">Add a Transaction</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_transaction">Type</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_value">Value</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_transaction_category_name">Category Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_amount">Amount</string>

    <!-- Units for the amount of money (ron) [CHAR LIMIT=5] -->
    <string name="unit_amount">RON</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="transaction_type_income">Income</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="transaction_type_expense">Expense</string>

    <!-- Toast message in editor when new transaction has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_transaction_successful">Transaction saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_transaction_failed">Error with saving transaction</string>
</resources>
